# ReSolve

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  imgui.ini  readme.md  todo.txt
app/: indexBuffer.cpp  indexBuffer.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  vertexArray.cpp  vertexArray.hpp  vertexBufferLayout.cpp
assets/shaders/: basic.shader  fractal.shader  maze.shader  red.shader
include_old/GLAD/glad/: glad.h
renderer/: indexBuffer.hpp  renderer.hpp  shader.cpp  shader.hpp  vertexBufferLayout.hpp
resources/shaders/: basic.shader  red.shader  test.shader
src/: application.cpp  application.hpp  event.cpp  event.hpp  indexBuffer.cpp  indexBuffer.hpp  main(Henrik Melfald Kittang's conflicted copy 2024-08-22).cpp  main.cpp  random.cpp  random.hpp  renderWindow.cpp  renderWindow.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertexArray.cpp  vertexArray.hpp  vertexBuffer.cpp  vertexBuffer.hpp  vertexBufferLayout.cpp
src/core/: appContext.hpp  application.cpp  application.hpp  asset.hpp  assetManager.cpp  assetManager.hpp  base.hpp  camera.cpp  camera.hpp  event.cpp  event.hpp  random.hpp  resource.hpp  resourceManager.cpp  resourceManager.hpp  resourseManager.cpp  resourseManager.hpp  scene.hpp  sceneManager.cpp  sceneManager.hpp  util.cpp
src/decapricated/: indexBuffer.cpp  indexBuffer.hpp  vertexArray.cpp  vertexArray.hpp  vertexBuffer.cpp  vertexBuffer.hpp  vertexBufferLayout.cpp  vertexBufferLayout.hpp
src/graphics/: indexBuffer.cpp  renderWindow.cpp  renderWindow.hpp  renderable.cpp  renderable.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertex.hpp  vertexArray.cpp  vertexBuffer.cpp  vertexLayout.cpp  vertexLayout.hpp
src/scenes/: sceneClearColor.cpp  sceneClearColor.hpp  sceneFractal.cpp  sceneFractal.hpp  sceneMaze.cpp  sceneMaze.hpp  sceneNoise.cpp  sceneNoise.hpp
src/tests/: test.hpp  testClearColor.cpp  testClearColor.hpp  testFractal.cpp  testFractal.hpp
src/util/: log.cpp  log.hpp  random.cpp  random.hpp  timer.cpp  timer.hpp  util.cpp  util.hpp
